--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -8,7 +8,7 @@
     <data>
          <variable
              name="item"
-             type="com.example.news_app.model.ArticlesItem" />
+             type="com.example.domain.model.ArticlesItemDTO" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
